<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_pic"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/welcome_note"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/welcome" />

        <LinearLayout
            android:id="@+id/viewdata4mdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvDisplayName"
                style="@style/ThemeOverlay.DisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvEmailID"
                style="@style/ThemeOverlay.DisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                style="@style/ThemeOverlay.DisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvOfficialID"
                style="@style/ThemeOverlay.DisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvOfficer"
                style="@style/ThemeOverlay.DisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewdata4msu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="gone">

            <EditText
                android:id="@+id/DisplayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/EmailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/PhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/OfficialID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/official_id"
                android:inputType="number" />

            <Switch
                android:id="@+id/Officer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_an_officer"
                android:textOff="No"
                android:textOn="Yes" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@color/grey_300">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backbutton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/nextbutton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@color/grey_100">

        <TextView
            android:id="@+id/devorg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dev_org" />
    </RelativeLayout>
</LinearLayout>